# ruflet

./: .gitignore  CONTRIBUTING_RUFLET.md  README.md  release.md
.github/: FUNDING.yml
.github/workflows/: build-ruby-native-android.yml  build-ruflet-android.yml
docs/: RUFLET_ROADMAP.md  android_emulator_guide.md  creating_new_app.md  widgets.md
docs/flet_python_protocol/: INDEX.md  PROTOCOL.md
docs/ruflet_layer/: INDEX.md  PROTOCOL.md
example/: Gemfile  README.md  calculator.rb  counter.rb  demo.rb  dialog.rb  feedback_surfaces.rb  hello_world.rb  main.rb  navigation.rb  solitaire.rb  tabs.rb  todo.rb
examples/: Gemfile  README.md  calculator.rb  counter.rb  dialog.rb  hello_world.rb  icon_search.rb  image_gallery.rb  main.rb  navigation.rb  solitaire.rb  studio_gallery.rb  tabs.rb  todo.rb
examples/ruflet_studio/: app.rb  helpers.rb  icon_search.rb  sections_charts.rb  sections_drawing.rb  sections_media.rb  sections_minesweeper.rb  sections_misc.rb
mruby_runtime_demo/: README.md  pubspec.yaml
mruby_runtime_demo/assets/: sample.rb
mruby_runtime_demo/lib/: main.dart
mruby_runtime_demo/linux/: CMakeLists.txt
mruby_runtime_demo/test/: widget_test.dart
mruby_runtime_demo/web/: index.html  manifest.json
mruby_runtime_demo/windows/: CMakeLists.txt
ruby_native_client/: README.md  pubspec.yaml
ruby_native_client/lib/: main.dart
ruby_native_client/linux/: CMakeLists.txt
ruby_native_client/web/: index.html  manifest.json
ruby_native_client/windows/: CMakeLists.txt
ruby_runtime/: .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
ruby_runtime/.dart_tool/: package_config.json  package_graph.json
ruby_runtime/android/src/main/cpp/: CMakeLists.txt  ruby_runtime_jni.cpp
ruflet_client/: README.md  flutter_launcher_icons.yaml  pubspec.yaml  pubspec_overrides.yaml
tools/: build_embedded_runtime.rb  generate_control_schema.py  generate_schema_controls.py
(+434 files in other folders)
